--- a/Web.config
+++ b/Web.config
@@ -169,7 +169,7 @@
           application trace log by browsing the "trace.axd" page from your web application
           root.
     -->
-    <trace enabled="false" writeToDiagnosticsTrace="true" requestLimit="1000" pageOutput="false" traceMode="SortByTime" localOnly="false"/>
+    <trace enabled="true" writeToDiagnosticsTrace="true" requestLimit="1000" pageOutput="true" traceMode="SortByTime" localOnly="true"/>
     <!--  SESSION STATE SETTINGS
           By default ASP .NET uses cookies to identify which requests belong to a particular session.
           If cookies are not available, a session can be tracked by adding a session identifier to the URL.
@@ -180,7 +180,7 @@
           This section sets the globalization settings of the application.
     -->
     <globalization requestEncoding="utf-8" responseEncoding="utf-8"/>
-    <pages validateRequest="true"/>
+    <pages validateRequest="false"/>
     <httpHandlers>
       <add verb="GET" path="CaptchaImage.aspx" type="WebControlCaptcha.CaptchaImageHandler, WebControlCaptcha"/>
       <add verb="*" path="aggbug.ashx" type="newtelligence.DasBlog.Web.Services.AggregatorBugHandler, newtelligence.DasBlog.Web.Services"/>
