--- a/Web.config
+++ b/Web.config
@@ -247,6 +247,6 @@
       <add name="CompressionModule" type="blowery.Web.HttpCompress.HttpModule, blowery.web.HttpCompress" preCondition="managedHandler" />
       <add name="IPBlackList" type="newtelligence.DasBlog.Web.Core.IPBlackList, newtelligence.DasBlog.Web.Core" preCondition="managedHandler" />
     </modules>
-    <validation validateIntegratedModeConfiguration="false" />
+    <validation validateIntegratedModeConfiguration="true" />
   </system.webServer>
 </configuration>
