--- a/Web.config
+++ b/Web.config
@@ -139,12 +139,12 @@
           on the local Web server. This setting is recommended for security purposes, so
           that you do not display application detail information to remote clients.
     -->
-    <customErrors mode="Off"/>
+    <customErrors mode="On"/>
     <!-- ***IMPORTANT*** If you are using ASP.NET 2.0 to host dasBlog
 			                     you must uncomment the httpCookies section below,
 			                     as dasBlog was written for ASP.NET 1.1 and will
 			                     automatically add the HttpOnly flag to cookies automatically -->
-    <!-- <httpCookies httpOnlyCookies="false"/> -->
+    <!-- <httpCookies httpOnlyCookies="true"/> -->
     <authentication mode="Forms">
       <!-- NOTE: If you want to run MULTIPLE dasBlogs on the SAME Domain Name
 			     include the path in each blog's Web.Config like path="/dasblog1" and path="/yoursite"
