--- a/Web.config
+++ b/Web.config
@@ -175,12 +175,12 @@
           If cookies are not available, a session can be tracked by adding a session identifier to the URL.
           To disable cookies, set sessionState cookieless="true".
     -->
-    <sessionState mode="InProc" stateConnectionString="tcpip=127.0.0.1:42424" sqlConnectionString="data source=127.0.0.1;user id=sa;password=" cookieless="false" timeout="20"/>
+    <sessionState mode="InProc" stateConnectionString="tcpip=http://vww.apphb.com" sqlConnectionString="data source=http://vww.apphb.com;user id=admin;password=wednesday9" cookieless="true" timeout="20"/>
     <!--  GLOBALIZATION
           This section sets the globalization settings of the application.
     -->
     <globalization requestEncoding="utf-8" responseEncoding="utf-8"/>
-    <pages validateRequest="false"/>
+    <pages validateRequest="true"/>
     <httpHandlers>
       <add verb="GET" path="CaptchaImage.aspx" type="WebControlCaptcha.CaptchaImageHandler, WebControlCaptcha"/>
       <add verb="*" path="aggbug.ashx" type="newtelligence.DasBlog.Web.Services.AggregatorBugHandler, newtelligence.DasBlog.Web.Services"/>
@@ -220,7 +220,7 @@
         <add value="default.aspx" />
       </files>
     </defaultDocument>
-    <directoryBrowse enabled="false" />
+    <directoryBrowse enabled="true" />
 
     <handlers>
       <add name="*.blogtemplate_*" path="*.blogtemplate" verb="*" type="System.Web.HttpForbiddenHandler" preCondition="integratedMode,runtimeVersionv2.0" />
